@@ -391,7 +391,7 @@ class MySQLCursorTests(tests.TestsCursor):
             b"128",
             b"1281288",
             b"3.14",
-            b"'3.14'",
+            b"3.14",
             b"'back\\\\slash'",
             b"'newline\\n'",
             b"'return\\r'",
@@ -456,7 +456,7 @@ class MySQLCursorTests(tests.TestsCursor):
             b"b": b"128",
             b"c": b"1281288",
             b"d": b"3.14",
-            b"e": b"'3.14'",
+            b"e": b"3.14",
             b"f": b"'back\\\\slash'",
             b"g": b"'newline\\n'",
             b"h": b"'return\\r'",
